test/should_fail/cast3.fluffy
export main
func main() : int:
	var l : void* = null
	var l2 : unsigned byte* = l
	return 0
